<resources>
    <string name="app_name">AppPrueba</string>
    <string name="iniciar">INGRESAR</string>
    <string name="recordar_credenciales">Recordar Credenciales</string>
    <string name="contrasena">Contraseña</string>
    <string name="logo">Logo Evil Corp</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre :</string>
    <string name="apellido">Apellidos :</string>
    <string name="ine">INE :</string>
    <string name="telefono">Telefono :</string>
    <string name="direccion">Direccion :</string>
    <string name="puesto">Puesto :</string>
    <string name="enviar">Enviar</string>
    <string name="nota_creada">Se guardo correctamente el registro</string>
    <string name="nota_actualizada">Se actualizo correctamente el registro</string>
    <string name="crea_nota_primero">No ah escrito nada</string>
    <string name="new_personal">Agregar Personal</string>
    <string name="str_menu">Menu</string>
</resources>
