<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:backgroundTint="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nombre"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        app:layout_constraintEnd_toEndOf="@+id/tvNombre"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvIne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ine"
        app:layout_constraintEnd_toEndOf="@+id/tvApellido"
        app:layout_constraintStart_toStartOf="@+id/tvApellido"
        app:layout_constraintTop_toBottomOf="@+id/tvApellido"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        app:layout_constraintEnd_toEndOf="@+id/tvIne"
        app:layout_constraintStart_toStartOf="@+id/tvIne"
        app:layout_constraintTop_toBottomOf="@+id/tvIne"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        app:layout_constraintEnd_toEndOf="@+id/tvTelefono"
        app:layout_constraintStart_toStartOf="@+id/tvTelefono"
        app:layout_constraintTop_toBottomOf="@+id/tvTelefono"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvPuesto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/puesto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvDireccion"
        app:layout_constraintStart_toStartOf="@+id/tvDireccion"
        app:layout_constraintTop_toBottomOf="@+id/tvDireccion"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>